--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,7 @@ input {
   border-radius: 0;
   border: 1px solid #00004b;
   font-size: 0.9rem;
-  padding: 0.3rem;
+  padding: 0.5rem;
   margin-bottom: 0.5rem; }
 
 input[type="text"],
@@ -95,7 +95,8 @@ button {
   background: #00004b;
   border-bottom: 1px solid white;
   color: white;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  height: 2.5rem; }
   button:hover {
     background: white;
     color: #00004b; }
