--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -8,7 +8,7 @@ input {
     border-radius: 0;
     border:1px solid $black;
     font-size:0.9rem;
-    padding:0.3rem;
+    padding:0.5rem;
     margin-bottom:0.5rem;
 }
 
@@ -27,6 +27,7 @@ button {
     border-bottom:1px solid $white;
     color:$white;
     transition:all 0.2s;
+    height:2.5rem;
     
     &:hover {
       background:$white;
