--- a/public/action/css/style.css
+++ b/public/action/css/style.css
@@ -36,5 +36,53 @@ img {
 }
 
 .project {
-    margin
+    cursor:pointer;
+}
+
+#modal {
+    position:fixed;
+    width:100vw;
+    height:100vh;
+    background:rgba(255,255,255,0.7);
+    z-index:100;
+    top:0;
+    left:0;
+    /* display:flex; */
+    align-items:center;
+    justify-content:center;
+
+    display:none;
+}
+
+#modal.active {
+    display:flex;
+}
+
+.close {
+    position:absolute;
+    top:1rem;
+    right:1rem;
+    color:#000;
+    font-size:3rem;
+    cursor:pointer;
+}
+
+.close:hover {
+    opacity:0.7;
+}
+
+.modal--content {
+    width:100%;
+    height:100%;
+    max-width:1200px;
+    max-height:90vh;
+    padding:1em;
+    background:white;
+}
+
+.modal--content img {
+    max-width:100%;
+    max-height:calc(100% - 3rem);
+    display:block;
+    margin:auto;
 }
